@@ -51,7 +51,7 @@ _parents_level = [ "", "parents", "grandparents", "great grandparents", "second 
                   "fifth great grandparents",  "sixth great grandparents",
                   "seventh great grandparents", "eighth great grandparents",
                   "ninth great grandparents", "tenth great grandparents",
-                  "eleventh great grandparents",  "twelefth great grandparents",
+                  "eleventh great grandparents",  "twelfth great grandparents",
                   "thirteenth great grandparents", "fourteenth great grandparents",
                   "fifteenth great grandparents", "sixteenth great grandparents",
                   "seventeenth great grandparents", "eighteenth great grandparents",
@@ -62,7 +62,7 @@ _father_level = [ "", "father", "grandfather", "great grandfather", "second grea
                   "fifth great grandfather",  "sixth great grandfather",
                   "seventh great grandfather", "eighth great grandfather",
                   "ninth great grandfather", "tenth great grandfather",
-                  "eleventh great grandfather",  "twelefth great grandfather",
+                  "eleventh great grandfather",  "twelfth great grandfather",
                   "thirteenth great grandfather", "fourteenth great grandfather",
                   "fifteenth great grandfather", "sixteenth great grandfather",
                   "seventeenth great grandfather", "eighteenth great grandfather",
@@ -73,7 +73,7 @@ _mother_level = [ "", "mother", "grandmother", "great grandmother", "second grea
                   "fifth great grandmother",  "sixth great grandmother",
                   "seventh great grandmother", "eighth great grandmother",
                   "ninth great grandmother", "tenth great grandmother",
-                  "eleventh great grandmother",  "twelefth great grandmother",
+                  "eleventh great grandmother",  "twelfth great grandmother",
                   "thirteenth great grandmother", "fourteenth great grandmother",
                   "fifteenth great grandmother", "sixteenth great grandmother",
                   "seventeenth great grandmother", "eighteenth great grandmother",
@@ -84,7 +84,7 @@ _son_level = [ "", "son", "grandson", "great grandson", "second great grandson",
                "fifth great grandson",  "sixth great grandson",
                "seventh great grandson", "eighth great grandson",
                "ninth great grandson", "tenth great grandson",
-               "eleventh great grandson",  "twelefth great grandson",
+               "eleventh great grandson",  "twelfth great grandson",
                "thirteenth great grandson", "fourteenth great grandson",
                "fifteenth great grandson", "sixteenth great grandson",
                "seventeenth great grandson", "eighteenth great grandson",
@@ -96,7 +96,7 @@ _daughter_level = [ "", "daughter", "granddaughter", "great granddaughter",
                     "fifth great granddaughter",  "sixth great granddaughter",
                     "seventh great granddaughter", "eighth great granddaughter",
                     "ninth great granddaughter", "tenth great granddaughter",
-                    "eleventh great granddaughter",  "twelefth great granddaughter",
+                    "eleventh great granddaughter",  "twelfth great granddaughter",
                     "thirteenth great granddaughter", "fourteenth great granddaughter",
                     "fifteenth great granddaughter", "sixteenth great granddaughter",
                     "seventeenth great granddaughter", "eighteenth great granddaughter",
@@ -107,7 +107,7 @@ _sister_level = [ "", "sister", "aunt", "grandaunt", "great grandaunt", "second 
                   "fifth great grandaunt",  "sixth great grandaunt",
                   "seventh great grandaunt", "eighth great grandaunt",
                   "ninth great grandaunt", "tenth great grandaunt",
-                  "eleventh great grandaunt",  "twelefth great grandaunt",
+                  "eleventh great grandaunt",  "twelfth great grandaunt",
                   "thirteenth great grandaunt", "fourteenth great grandaunt",
                   "fifteenth great grandaunt", "sixteenth great grandaunt",
                   "seventeenth great grandaunt", "eighteenth great grandaunt",
@@ -118,7 +118,7 @@ _brother_level = [ "", "brother", "uncle", "granduncle", "great granduncle", "se
                    "fifth great granduncle",  "sixth great granduncle",
                    "seventh great granduncle", "eighth great granduncle",
                    "ninth great granduncle", "tenth great granduncle",
-                   "eleventh great granduncle",  "twelefth great granduncle",
+                   "eleventh great granduncle",  "twelfth great granduncle",
                    "thirteenth great granduncle", "fourteenth great granduncle",
                    "fifteenth great granduncle", "sixteenth great granduncle",
                    "seventeenth great granduncle", "eighteenth great granduncle",
@@ -129,7 +129,7 @@ _nephew_level = [ "", "nephew", "grandnephew", "great grandnephew", "second grea
                   "fifth great grandnephew",  "sixth great grandnephew",
                   "seventh great grandnephew", "eighth great grandnephew",
                   "ninth great grandnephew", "tenth great grandnephew",
-                  "eleventh great grandnephew",  "twelefth great grandnephew",
+                  "eleventh great grandnephew",  "twelfth great grandnephew",
                   "thirteenth great grandnephew", "fourteenth great grandnephew",
                   "fifteenth great grandnephew", "sixteenth great grandnephew",
                   "seventeenth great grandnephew", "eighteenth great grandnephew",
@@ -140,7 +140,7 @@ _niece_level = [ "", "niece", "grandniece", "great grandniece", "second great gr
                  "fifth great grandniece",  "sixth great grandniece",
                  "seventh great grandniece", "eighth great grandniece",
                  "ninth great grandniece", "tenth great grandniece",
-                 "eleventh great grandniece",  "twelefth great grandniece",
+                 "eleventh great grandniece",  "twelfth great grandniece",
                  "thirteenth great grandniece", "fourteenth great grandniece",
                  "fifteenth great grandniece", "sixteenth great grandniece",
                  "seventeenth great grandniece", "eighteenth great grandniece",
